--- a/0x02-i18n/templates/0-index.html
+++ b/0x02-i18n/templates/0-index.html
@@ -1,8 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
 {% block head %}
-<title>Welcome to Holberton</title>
-{% endblock %}
+    <title>Welcome to Holberton</title>
+{% endblock head %}
 
 {% block body %}
-<h1>Hello world</h1>
-{% endblock %}
+    <h1>Hello world</h1>
+{% endblock body %}
